<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.jeanette.planpenny.Activities.CalendarActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="left|top"
            android:background="@color/MainColor"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Calendar"
                android:id="@+id/textMainTitle"
                android:textColor="@color/SecondaryColor"
                android:textSize="@android:dimen/app_icon_size" />
            <SearchView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/searchView"
                android:queryHint="Search here"
                android:textColor="@color/SecondaryColor"/>

        </LinearLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/SecondaryColor"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                >
                <TextView
                    android:id="@+id/previousDay"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/MainColor"
                    android:gravity="center_horizontal"
                    android:text="&lt;&lt;"
                    android:clickable="true"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewMonth"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/MainColor"
                android:gravity="center_horizontal"
                android:layout_toRightOf="@+id/previousDay"

                />
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_toRightOf="@+id/textViewMonth"
                >
                <TextView
                    android:id="@+id/next"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/MainColor"
                    android:gravity="center_horizontal"
                    android:text=">>"
                    android:clickable="true"
                    />
            </LinearLayout>

        </RelativeLayout>

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="359dp"

            android:numColumns="7"
            android:verticalSpacing="2dp"
            android:horizontalSpacing="2dp"
            android:stretchMode="columnWidth"

            android:gravity="center"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:layout_weight="1.05">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/SecondaryColor"
                android:text="@string/title_activity_tasks"
                android:id="@+id/buttonTasks"
                android:clickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/SecondaryColor"
                android:text="@string/title_activity_projects"
                android:id="@+id/buttonProjects"
                android:clickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/MainColor"
                android:text="@string/title_activity_calendar"
                android:id="@+id/buttonCalendar"
                android:clickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/SecondaryColor"
                android:text="@string/title_activity_clip_board"
                android:id="@+id/buttonClipBoard"
                android:clickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/SecondaryColor"
                android:text="@string/title_activity_categories"
                android:id="@+id/buttonCategories"
                android:clickable="true" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>